fix: remove x overflow on directory view
The header wasn't moving along with the rows when they were scrolled, so
the scroll bar has been removed.

--- a/frontend/app/view/directorypreview.less
+++ b/frontend/app/view/directorypreview.less
@@ -92,6 +92,7 @@
             .dir-table-body-scroll-box {
                 position: relative;
                 overflow-y: auto;
+                overflow-x: hidden;
                 .dummy {
                     position: absolute;
                     visibility: hidden;
